# logging.h

./: .bash_history  .core.yml  .gitignore  CMakeLists.txt  Dockerfile  README.md  conanfile.py
cmake/: Git.cmake  loggingConfig.cmake  pack.cmake  require-git.cmake
example/: main.c
include/logging/: logging.h
src/: logging.c
